--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jagadeesh</title>
     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="jagadeeshwaran" data-description="Support me on Buy me a coffee!" data-message="" data-color="#ffc500" data-position="Right" data-x_margin="32" data-y_margin="18" ></script>
-    
+    <script>
+  (function(){
+    var redirect = sessionStorage.redirect;
+    delete sessionStorage.redirect;
+    if (redirect && redirect !== location.href) {
+      history.replaceState(null, null, redirect);
+    }
+  })();
+</script>
+
   </head>
   <body class="">
     <div id="root"></div>
